Fix select menu overlap

--- a/src/render/assets/css/input.module.css
+++ b/src/render/assets/css/input.module.css
@@ -162,3 +162,7 @@ input:disabled, select:disabled {
 .actionBlock button {
     width: 100%;
 }
+
+.select {
+    position: relative;
+}
